--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,11 +13,11 @@ jenkins_plugin_list:
   - jira
   - github
   - bitbucket
-  - gitlab
+  - gitlab-plugin
 
 docker_compose_version: "v2.30.1"
 
-# Optional: Custom Jenkins home directory
 jenkins_home_dir: "/var/jenkins_home"
+jenkins_admin_user: "admin"
 jenkins_admin_password: "your_custom_password"
 
