--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,5 @@
 # handlers/main.yml
-
-- name: restart jenkins
-  shell: docker compose down && docker compose up -d
+- name: Restart Jenkins
+  ansible.builtin.shell: docker compose down && docker compose up -d
   args:
     chdir: "{{ jenkins_compose_dir }}"
