--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,12 +5,11 @@ galaxy_info:
   description: "Ansible role to deploy Jenkins CI server via Docker Compose, with automated plugin setup and flexible configuration."
   company: mamrezb
   license: MIT
-  min_ansible_version: 2.9
+  min_ansible_version: "2.9"
   platforms:
     - name: EL
       versions:
-        - 7
-        - 8
+        - all
     - name: Ubuntu
       versions:
         - bionic
@@ -25,7 +24,7 @@ galaxy_info:
     - jenkins
     - docker
     - ci
-    - continuous_integration
+    - continuous integration
     - cicd
     - devops
     - automation
