--- a/tasks/install_docker.yml
+++ b/tasks/install_docker.yml
@@ -1,24 +1,25 @@
 # tasks/install_docker.yml
 
 # Ubuntu/Debian Systems
-- block:
+- name: Install Docker and Docker Compose
+  block:
     - name: Add Docker GPG key (Ubuntu/Debian)
-      apt_key:
+      ansible.builtin.apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
         state: present
 
     - name: Add Docker repository (Ubuntu/Debian)
-      apt_repository:
+      ansible.builtin.apt_repository:
         repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
         state: present
         filename: docker
 
     - name: Update APT package index (Ubuntu/Debian)
-      apt:
-        update_cache: yes
+      ansible.builtin.apt:
+        update_cache: true
 
     - name: Install Docker Engine and Docker Compose (Ubuntu/Debian)
-      apt:
+      ansible.builtin.apt:
         name:
           - docker-ce
           - docker-ce-cli
@@ -27,25 +28,26 @@
         state: present
 
     - name: Ensure Docker service is running (Ubuntu/Debian)
-      service:
+      ansible.builtin.service:
         name: docker
         state: started
-        enabled: yes
+        enabled: true
   when: ansible_os_family == 'Debian'
 
 # Red Hat Systems
-- block:
+- name: Install Docker and Docker Compose
+  block:
     - name: Add Docker repository (Red Hat)
-      yum_repository:
+      ansible.builtin.yum_repository:
         name: docker-ce
         description: Docker CE Repository
         baseurl: "https://download.docker.com/linux/centos/$(rpm -E %{rhel})/x86_64/stable"
-        enabled: yes
-        gpgcheck: yes
+        enabled: true
+        gpgcheck: true
         gpgkey: https://download.docker.com/linux/centos/gpg
 
     - name: Install Docker Engine (Red Hat)
-      yum:
+      ansible.builtin.dnf:
         name:
           - docker-ce
           - docker-ce-cli
@@ -53,14 +55,14 @@
         state: present
 
     - name: Install Docker Compose (Red Hat)
-      get_url:
+      ansible.builtin.get_url:
         url: "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-{{ ansible_system }}-{{ ansible_architecture }}"
         dest: /usr/local/bin/docker-compose
         mode: '0755'
 
     - name: Ensure Docker service is running (Red Hat)
-      service:
+      ansible.builtin.service:
         name: docker
         state: started
-        enabled: yes
+        enabled: true
   when: ansible_os_family == 'RedHat'
