--- a/tasks/selinux.yml
+++ b/tasks/selinux.yml
@@ -1,15 +1,15 @@
 # tasks/selinux.yml
 
 - name: Check SELinux status
-  command: getenforce
+  ansible.builtin.command: getenforce
   register: selinux_status
 
 - name: Set SELinux to permissive mode
-  command: setenforce 0
+  ansible.builtin.command: setenforce 0
   when: selinux_status.stdout == "Enforcing"
 
 - name: Modify SELinux config file to set permissive mode on reboot
-  replace:
+  ansible.builtin.replace:
     path: /etc/selinux/config
     regexp: '^SELINUX=enforcing'
     replace: 'SELINUX=permissive'
